--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@ html, body {
   padding: 0;
 }
 
+h1 {
+  font-family: 'Courier New', Courier, monospace;
+}
+
 canvas {
   display: block;
+  position: absolute;
 }
