--- a/style.css
+++ b/style.css
@@ -7,7 +7,13 @@ h1 {
   font-family: 'Courier New', Courier, monospace;
 }
 
+p {
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 8pt;
+}
+
 canvas {
   display: block;
   position: absolute;
 }
+
